--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,11 +43,16 @@ file.reference.mysql-connector-j-8.4.0.jar=web\\lib\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web\\lib\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=web\\lib\\sqljdbc42.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=web/lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=web/lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=web/lib/javax.mail.jar
+file.reference.jaxb-api-2.1.jar=web/lib/jaxb-api-2.1.jar
+file.reference.lib-owlcarousel=web/lib/owlcarousel
 file.reference.lombok-1.18.24.jar=web/lib/lombok-1.18.24.jar
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
-file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
+file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -63,7 +68,15 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
- 
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.lombok-1.18.24.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.lib-owlcarousel}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.javax.mail.jar}
     ${file.reference.sqljdbc42.jar}:\
     ${libs.jstl.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
