--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -116,6 +116,10 @@
         <servlet-name>UpdateUserProfileController</servlet-name>
         <servlet-class>controller.UpdateUserProfileController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CourseDetailController</servlet-name>
+        <servlet-class>controller.CourseDetailController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
@@ -155,5 +159,9 @@
     <servlet-mapping>
         <servlet-name>UpdateUserProfileController</servlet-name>
         <url-pattern>/UpdateUserProfile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseDetailController</servlet-name>
+        <url-pattern>/CourseDetail</url-pattern>
     </servlet-mapping>
 </web-app>
