--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,35 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=web\\lib\\activation.jar
+file.reference.commons-codec-1.15.jar=web\\lib\\apache poi\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=web\\lib\\apache poi\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=web\\lib\\apache poi\\commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=web\\lib\\apache poi\\commons-io-2.11.0.jar
+file.reference.commons-logging-1.2.jar=web\\lib\\apache poi\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=web\\lib\\apache poi\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.07.jar=web\\lib\\apache poi\\curvesapi-1.07.jar
+file.reference.jakarta.activation-2.0.1.jar=web\\lib\\apache poi\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.xml.bind-api-3.0.1.jar=web\\lib\\apache poi\\jakarta.xml.bind-api-3.0.1.jar
 file.reference.javax.mail.jar=web\\lib\\javax.mail.jar
 file.reference.jaxb-api-2.1.jar=web\\lib\\jaxb-api-2.1.jar
+file.reference.log4j-api-2.18.0.jar=web\\lib\\apache poi\\log4j-api-2.18.0.jar
+file.reference.log4j-core-3.0.0-beta1.jar=web\\lib\\apache poi\\log4j-core-3.0.0-beta1.jar
 file.reference.lombok-1.18.24.jar=web\\lib\\lombok-1.18.24.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
+file.reference.poi-5.2.3.jar=web\\lib\\apache poi\\poi-5.2.3.jar
+file.reference.poi-examples-5.2.3.jar=web\\lib\\apache poi\\poi-examples-5.2.3.jar
+file.reference.poi-excelant-5.2.3.jar=web\\lib\\apache poi\\poi-excelant-5.2.3.jar
+file.reference.poi-javadoc-5.2.3.jar=web\\lib\\apache poi\\poi-javadoc-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=web\\lib\\apache poi\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-full-5.2.3.jar=web\\lib\\apache poi\\poi-ooxml-full-5.2.3.jar
+file.reference.poi-ooxml-lite-5.2.3.jar=web\\lib\\apache poi\\poi-ooxml-lite-5.2.3.jar
+file.reference.poi-scratchpad-5.2.3.jar=web\\lib\\apache poi\\poi-scratchpad-5.2.3.jar
+file.reference.slf4j-api-1.7.36.jar=web\\lib\\apache poi\\slf4j-api-1.7.36.jar
+file.reference.SparseBitSet-1.2.jar=web\\lib\\apache poi\\SparseBitSet-1.2.jar
+file.reference.xmlbeans-5.1.1.jar=web\\lib\\apache poi\\xmlbeans-5.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,7 +73,29 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.lombok-1.18.24.jar}
+    ${file.reference.lombok-1.18.24.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.07.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
+    ${file.reference.log4j-api-2.18.0.jar}:\
+    ${file.reference.log4j-core-3.0.0-beta1.jar}:\
+    ${file.reference.poi-5.2.3.jar}:\
+    ${file.reference.poi-examples-5.2.3.jar}:\
+    ${file.reference.poi-excelant-5.2.3.jar}:\
+    ${file.reference.poi-javadoc-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.2.3.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
+    ${file.reference.poi-scratchpad-5.2.3.jar}:\
+    ${file.reference.slf4j-api-1.7.36.jar}:\
+    ${file.reference.xmlbeans-5.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
