--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -101,6 +101,10 @@
         <servlet-name>CourseDetailController</servlet-name>
         <servlet-class>controller.CourseDetailController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterCourseController</servlet-name>
+        <servlet-class>controller.RegisterCourseController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
