--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -120,6 +120,10 @@
         <servlet-name>CourseDetailController</servlet-name>
         <servlet-class>controller.CourseDetailController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterCourseController</servlet-name>
+        <servlet-class>controller.RegisterCourseController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
@@ -163,5 +167,9 @@
     <servlet-mapping>
         <servlet-name>CourseDetailController</servlet-name>
         <url-pattern>/CourseDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterCourseController</servlet-name>
+        <url-pattern>/RegisterCourse</url-pattern>
     </servlet-mapping>
 </web-app>
