--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ChapterDisplayController</servlet-name>
         <servlet-class>controller.ChapterDisplayController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LessonVideoController</servlet-name>
+        <servlet-class>controller.LessonVideoController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>changePassword</servlet-name>
         <url-pattern>/changePassword</url-pattern>
@@ -23,5 +27,9 @@
     <servlet-mapping>
         <servlet-name>ChapterDisplayController</servlet-name>
         <url-pattern>/ChapterDisplayController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LessonVideoController</servlet-name>
+        <url-pattern>/LessonVideoController</url-pattern>
     </servlet-mapping>
 </web-app>
