--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>SettingDashboardController</servlet-name>
         <servlet-class>controller.SettingDashboardController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MarketingDashboardController</servlet-name>
+        <servlet-class>controller.MarketingDashboardController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UserDashboardController</servlet-name>
         <url-pattern>/UserDashboardController</url-pattern>
@@ -15,5 +19,9 @@
     <servlet-mapping>
         <servlet-name>SettingDashboardController</servlet-name>
         <url-pattern>/SettingDashboardController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MarketingDashboardController</servlet-name>
+        <url-pattern>/MarketingDashboardController</url-pattern>
     </servlet-mapping>
 </web-app>
