--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,7 +6,10 @@ javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
 deploy.ant.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+file.reference.activation.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\javax.activation-1.2.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
