--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,10 @@
 deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jaxb-api-2.1.jar
+file.reference.lombok-1.18.24.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\sending email\\lombok-1.18.24.jar
+file.reference.sqljdbc42.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
 javac.debug=true
