--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,71 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
-    <!-- Declare ChangePasswordController Servlet -->
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+    <!-- Declare Servlets -->
     <servlet>
-        <servlet-name>changePassword</servlet-name>
+        <servlet-name>ChangePasswordController</servlet-name>
         <servlet-class>controller.ChangePasswordController</servlet-class>
     </servlet>
-
-    <!-- Declare ForgotPasswordController Servlet -->
     <servlet>
         <servlet-name>ForgotPasswordController</servlet-name>
         <servlet-class>controller.ForgotPasswordController</servlet-class>
     </servlet>
-
-    <!-- Declare Controller Servlet -->
     <servlet>
-        <servlet-name>Controller</servlet-name>
-        <servlet-class>controller.Controller</servlet-class>
+        <servlet-name>ChapterDisplayController</servlet-name>
+        <servlet-class>controller.ChapterDisplayController</servlet-class>
     </servlet>
-
-    <!-- Declare BlogListServlet -->
+    <servlet>
+        <servlet-name>LessonVideoController</servlet-name>
+        <servlet-class>controller.LessonVideoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserListController</servlet-name>
+        <servlet-class>controller.UserListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AdminDashboardController</servlet-name>
+        <servlet-class>controller.AdminDashboardController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DashboardController</servlet-name>
+        <servlet-class>controller.DashboardController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserDashboardController</servlet-name>
+        <servlet-class>controller.UserDashboardController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SettingDashboardController</servlet-name>
+        <servlet-class>controller.SettingDashboardController</servlet-class>
+    </servlet>
     <servlet>
         <servlet-name>BlogListServlet</servlet-name>
         <servlet-class>controller.BlogListServlet</servlet-class>
     </servlet>
-
-    <!-- Map ChangePasswordController Servlet -->
+    <servlet>
+        <servlet-name>CourseListController</servlet-name>
+        <servlet-class>controller.CourseListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserProfileController</servlet-name>
+        <servlet-class>controller.UserProfileController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateUserProfileController</servlet-name>
+        <servlet-class>controller.UpdateUserProfileController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CourseDetailController</servlet-name>
+        <servlet-class>controller.CourseDetailController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RegisterCourseController</servlet-name>
+        <servlet-class>controller.RegisterCourseController</servlet-class>
+    </servlet>
+    <!-- Declare Mappings -->
     <servlet-mapping>
-        <servlet-name>changePassword</servlet-name>
+        <servlet-name>ChangePasswordController</servlet-name>
         <url-pattern>/changePassword</url-pattern>
     </servlet-mapping>
-
-    <!-- Map ForgotPasswordController Servlet -->
     <servlet-mapping>
         <servlet-name>ForgotPasswordController</servlet-name>
-        <url-pattern>/ForgotPasswordController</url-pattern>
+        <url-pattern>/ForgotPassword</url-pattern>
     </servlet-mapping>
-
-    <!-- Map Controller Servlet -->
     <servlet-mapping>
-        <servlet-name>Controller</servlet-name>
-        <url-pattern>/Controller</url-pattern>
+        <servlet-name>ChapterDisplayController</servlet-name>
+        <url-pattern>/ChapterDisplay</url-pattern>
     </servlet-mapping>
-
-    <!-- Map BlogListServlet -->
+    <servlet-mapping>
+        <servlet-name>LessonVideoController</servlet-name>
+        <url-pattern>/LessonVideo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserDashboardController</servlet-name>
+        <url-pattern>/UserDashboard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SettingDashboardController</servlet-name>
+        <url-pattern>/SettingDashboard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseListController</servlet-name>
+        <url-pattern>/CourseList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserProfileController</servlet-name>
+        <url-pattern>/UserProfile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfileController</servlet-name>
+        <url-pattern>/UpdateUserProfile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseDetailController</servlet-name>
+        <url-pattern>/CourseDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterCourseController</servlet-name>
+        <url-pattern>/RegisterCourse</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>BlogListServlet</servlet-name>
         <url-pattern>/blogList</url-pattern>
     </servlet-mapping>
-
-    <!-- Declare AuthorizationFilter -->
+    <!-- Declare Authorization Filter -->
     <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>filter.AuthorizationFilter</filter-class>
     </filter>
-
-    <!-- Map AuthorizationFilter -->
+    <!-- Map Authorization Filter -->
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
-
     <!-- Session Configuration -->
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-
 </web-app>
