--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+
     <!-- Declare Servlets -->
     <servlet>
         <servlet-name>ChangePasswordController</servlet-name>
@@ -28,6 +31,10 @@
     <servlet>
         <servlet-name>DashboardController</servlet-name>
         <servlet-class>controller.DashboardController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AccountDashboardController</servlet-name>
+        <servlet-class>controller.AccountDashboardController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>UserDashboardController</servlet-name>
@@ -61,6 +68,7 @@
         <servlet-name>RegisterCourseController</servlet-name>
         <servlet-class>controller.RegisterCourseController</servlet-class>
     </servlet>
+
     <!-- Declare Mappings -->
     <servlet-mapping>
         <servlet-name>ChangePasswordController</servlet-name>
@@ -110,16 +118,19 @@
         <servlet-name>BlogListServlet</servlet-name>
         <url-pattern>/blogList</url-pattern>
     </servlet-mapping>
+
     <!-- Declare Authorization Filter -->
     <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>filter.AuthorizationFilter</filter-class>
     </filter>
+
     <!-- Map Authorization Filter -->
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
+
     <!-- Session Configuration -->
     <session-config>
         <session-timeout>30</session-timeout>
