--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>CourseController</servlet-name>
         <servlet-class>controller.CourseController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CourseAnalysisServlet</servlet-name>
+        <servlet-class>controller.CourseAnalysisServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
@@ -55,5 +59,9 @@
     <servlet-mapping>
         <servlet-name>CourseController</servlet-name>
         <url-pattern>/CourseController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseAnalysisServlet</servlet-name>
+        <url-pattern>/CourseAnalysis</url-pattern>
     </servlet-mapping>
 </web-app>
