--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Tomcat
+j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=D:\\Tomcat
 javac.debug=true
 javadoc.preview=true
