--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.mockito-core-5.14.2-javadoc.jar=web/lib/mockito-core-5.14.2-javad
 file.reference.mysql-connector-j-8.4.0.jar=web/lib/mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=web/lib/mysql-connector-java-8.0.30.jar
 file.reference.org.jacoco.ant-0.8.12.jar=web/lib/org.jacoco.ant-0.8.12.jar
+file.reference.selenium-server-4.26.0.jar=web\\lib\\selenium-server-4.26.0.jar
 file.reference.sqljdbc42.jar=web/lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -66,7 +67,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.mockito-core-5.14.2-javadoc.jar}:\
-    ${file.reference.org.jacoco.ant-0.8.12.jar}
+    ${file.reference.org.jacoco.ant-0.8.12.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -84,7 +87,9 @@ javac.test.classpath=\
     ${libs.hamcrest.classpath}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.org.jacoco.ant-0.8.12.jar}:\
-    ${file.reference.mockito-core-4.11.0-javadoc.jar}
+    ${file.reference.mockito-core-4.11.0-javadoc.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -106,7 +111,8 @@ resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.selenium-server-4.26.0.jar}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
