--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
 j2ee.server.instance=tomcat101:home=D:\\Tomcat
 javac.debug=true
 javadoc.preview=true
@@ -82,10 +82,10 @@ javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
 
-deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
